--- a/front_end/models/trace/handlers/BUILD.gn
+++ b/front_end/models/trace/handlers/BUILD.gn
@@ -14,6 +14,7 @@ devtools_module("handlers") {
     "ExtensionTraceDataHandler.ts",
     "FramesHandler.ts",
     "GPUHandler.ts",
+    "ImagePaintingHandler.ts",
     "InitiatorsHandler.ts",
     "InvalidationsHandler.ts",
     "LargestImagePaintHandler.ts",
@@ -66,6 +67,7 @@ ts_library("unittests") {
     "ExtensionTraceDataHandler.test.ts",
     "FramesHandler.test.ts",
     "GPUHandler.test.ts",
+    "ImagePaintingHandler.test.ts",
     "InitiatorsHandler.test.ts",
     "InvalidationsHandler.test.ts",
     "LargestImagePaintHandler.test.ts",
