--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -949,6 +949,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/handlers/ExtensionTraceDataHandler.js",
   "front_end/models/trace/handlers/FramesHandler.js",
   "front_end/models/trace/handlers/GPUHandler.js",
+  "front_end/models/trace/handlers/ImagePaintingHandler.js",
   "front_end/models/trace/handlers/InitiatorsHandler.js",
   "front_end/models/trace/handlers/InvalidationsHandler.js",
   "front_end/models/trace/handlers/LargestImagePaintHandler.js",
