[GM3Restyling] Update soft context menu.
This updates the soft context menu according to the design spec,
specifically for the instances on the main UI and the Sources
panel.

1. Use the correct right arrow icon for submenus.
2. Use the correct spacing consistently.
3. Use the correct colors.

Bug: 330213829
Screenshot: https://i.imgur.com/aUBCU8Z.png
Change-Id: I8facf9c1af4c7278d21041d3eee85d8768e28454
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5471945
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Peter Müller <petermueller@chromium.org>
Commit-Queue: Peter Müller <petermueller@chromium.org>

--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -163,6 +163,7 @@ devtools_svg_sources = [
   "justify-items-end.svg",
   "justify-items-start.svg",
   "justify-items-stretch.svg",
+  "keyboard-arrow-right.svg",
   "keyboard-pen.svg",
   "large-arrow-right-filled.svg",
   "layers-filled.svg",
