--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -160,6 +160,7 @@ grd_files_release_sources = [
   "front_end/Images/justify-items-end.svg",
   "front_end/Images/justify-items-start.svg",
   "front_end/Images/justify-items-stretch.svg",
+  "front_end/Images/keyboard-arrow-right.svg",
   "front_end/Images/keyboard-pen.svg",
   "front_end/Images/large-arrow-right-filled.svg",
   "front_end/Images/layers-filled.svg",
