--- a/front_end/models/trace/handlers/BUILD.gn
+++ b/front_end/models/trace/handlers/BUILD.gn
@@ -24,6 +24,7 @@ devtools_module("handlers") {
     "MetaHandler.ts",
     "ModelHandlers.ts",
     "NetworkRequestsHandler.ts",
+    "PageFramesHandler.ts",
     "PageLoadMetricsHandler.ts",
     "RendererHandler.ts",
     "SamplesHandler.ts",
@@ -74,6 +75,7 @@ ts_library("unittests") {
     "MemoryHandler.test.ts",
     "MetaHandler.test.ts",
     "NetworkRequestsHandler.test.ts",
+    "PageFramesHandler.test.ts",
     "PageLoadMetricsHandler.test.ts",
     "RendererHandler.test.ts",
     "SamplesHandler.test.ts",
