--- a/.npmrc
+++ b/.npmrc
@@ -5,5 +5,6 @@ omit = optional  # This is to avoid downloading esbuild-* package.
 ignore-scripts = true
 save-exact = true
 save-dev = true # Only devDependencies are allowed.
+prefer-online = true # To consult the mirror instead of local cache.
 # See go/sk-npm-audit-mirror.
 registry = https://npm.skia.org/chrome-devtools
