[Console Insights] Conditionally hide thumbs up/down feedback buttons
If logging info for console insights is disabled via enterprise
policy, do not show the thumbs up/down buttons for providing feedback.

Bug: chromium:299423255, b/313052094
Change-Id: Idc5dbe86734146d7ef086c69caddddf338790f04
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5482147
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/panels/explain/BUILD.gn
+++ b/front_end/panels/explain/BUILD.gn
@@ -26,6 +26,7 @@ devtools_module("explain") {
     ":css_files",
     "../../core/common:bundle",
     "../../core/host:bundle",
+    "../../core/root:bundle",
     "../../core/sdk:bundle",
     "../../models/logs:bundle",
     "../../third_party/marked:bundle",
