Add mobile optimized Viewport insight
Bug: 325064016
Change-Id: I2a3d3461495c1eb390601a104364d36b1b26db7e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5372329
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/models/trace/insights/BUILD.gn
+++ b/front_end/models/trace/insights/BUILD.gn
@@ -12,6 +12,7 @@ devtools_module("insights") {
     "InteractionToNextPaint.ts",
     "LargestContentfulPaint.ts",
     "RenderBlocking.ts",
+    "Viewport.ts",
     "types.ts",
   ]
 
@@ -36,6 +37,7 @@ ts_library("unittests") {
     "InteractionToNextPaint.test.ts",
     "LargestContentfulPaint.test.ts",
     "RenderBlocking.test.ts",
+    "Viewport.test.ts",
   ]
 
   deps = [
