Add missing Attribution Reporting issue description file to BUILD
Without this, a runtime error is generated due to a missing file.

Bug: none
Change-Id: I7f77b7046b3add2f42699641da3e12832dc678bf
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5493743
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Simon Zünd <szuend@chromium.org>
Auto-Submit: Andrew Paseltiner <apaseltiner@chromium.org>

--- a/front_end/models/issues_manager/BUILD.gn
+++ b/front_end/models/issues_manager/BUILD.gn
@@ -64,6 +64,7 @@ devtools_issue_description_files = [
   "arInvalidRegisterOsTriggerHeader.md",
   "arInvalidRegisterSourceHeader.md",
   "arInvalidRegisterTriggerHeader.md",
+  "arNavigationRegistrationWithoutTransientUserActivation.md",
   "arOsSourceIgnored.md",
   "arOsTriggerIgnored.md",
   "arPermissionPolicyDisabled.md",
