--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -358,6 +358,7 @@ grd_files_release_sources = [
   "front_end/models/issues_manager/descriptions/arInvalidRegisterOsTriggerHeader.md",
   "front_end/models/issues_manager/descriptions/arInvalidRegisterSourceHeader.md",
   "front_end/models/issues_manager/descriptions/arInvalidRegisterTriggerHeader.md",
+  "front_end/models/issues_manager/descriptions/arNavigationRegistrationWithoutTransientUserActivation.md",
   "front_end/models/issues_manager/descriptions/arOsSourceIgnored.md",
   "front_end/models/issues_manager/descriptions/arOsTriggerIgnored.md",
   "front_end/models/issues_manager/descriptions/arPermissionPolicyDisabled.md",
