--- a/front_end/panels/timeline/BUILD.gn
+++ b/front_end/panels/timeline/BUILD.gn
@@ -113,6 +113,7 @@ devtools_module("timeline") {
     "../../panels/profiler:bundle",
     "../../services/annotations_manager:bundle",
     "../../services/trace_bounds:bundle",
+    "../../ui/components/buttons:bundle",
     "../../ui/components/data_grid:bundle",
     "../../ui/components/linkifier:bundle",
     "../../ui/components/menus:bundle",
