RPP: Refactor implementation of selector stats
This CL tidies up and rewrites some of the frontend selector stats
implementation to fix a few issues relating to its integration and usage
of the legacy TimelineModel code.

1. The helper added to TimelineModel has been replaced with a new helper
   in TraceEngine.Helpers that can gather all the UpdateLayoutTree (e.g.
   RecalcStyle) events in a given time-range.
2. We pushed the selector stats data from the SelectorStats event
   directly onto the UpdateLayoutTree events. We try to avoid mutating
   raw trace events, but this did exactly that. We also did this in the
   InvalidationsHandler, which didn't quite fit (although I can see why
   that was picked).
3. To avoid mixing concerns, there is now a SelectorStatsHandler, which
   takes the logic that was used but instead of mutating events it now
   builds up a map of UpdateLayoutTree event => Selector Timings.
4. The TypeScript types were incoherent and used a mixture of legacy,
   new engine, and unknown to translate between them. This is now
   consistently using the new engine's types throughout.
5. There was a type defined in the view layer, SelectorTimings, that
   looked nearly like the TraceEvents.SelectorTiming type defined in the
   engine's type defs. I updated the engine's type defs to match the
   trace event and removed the duplicate type from the view layer.
6. I added a sample trace that contains selector stats and some tests
   for the various layers that this CL introduces or updates.

I have manually tested this change locally, but would appreciate folks
reviewing this PR also do a bit of testing, as I am not super familiar
with the details of this feature and might have missed something.

Bug: None
Change-Id: I048a160756e32bac3b1ea0e27c8c3456fd10c2f7
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5490779
Reviewed-by: Paul Irish <paulirish@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
C

--- a/front_end/models/trace/handlers/BUILD.gn
+++ b/front_end/models/trace/handlers/BUILD.gn
@@ -30,6 +30,7 @@ devtools_module("handlers") {
     "RendererHandler.ts",
     "SamplesHandler.ts",
     "ScreenshotsHandler.ts",
+    "SelectorStatsHandler.ts",
     "Threads.ts",
     "UserInteractionsHandler.ts",
     "UserTimingsHandler.ts",
@@ -82,6 +83,7 @@ ts_library("unittests") {
     "RendererHandler.test.ts",
     "SamplesHandler.test.ts",
     "ScreenshotsHandler.test.ts",
+    "SelectorStatsHandler.test.ts",
     "Threads.test.ts",
     "UserInteractionsHandler.test.ts",
     "UserTimingsHandler.test.ts",
