Create CLS insight that returns non composited animations
This is still missing the remaining cls journey audits, doing these in follow ups

Bug: 332984174
Change-Id: I1b534aa462315521c106e999e3feb9d998069659
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5426999
Commit-Queue: Paul Irish <paulirish@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/models/trace/insights/BUILD.gn
+++ b/front_end/models/trace/insights/BUILD.gn
@@ -8,6 +8,7 @@ import("../../visibility.gni")
 
 devtools_module("insights") {
   sources = [
+    "CumulativeLayoutShift.ts",
     "InsightRunners.ts",
     "InteractionToNextPaint.ts",
     "LargestContentfulPaint.ts",
@@ -34,6 +35,7 @@ ts_library("unittests") {
   testonly = true
 
   sources = [
+    "CumulativeLayoutShift.test.ts",
     "InteractionToNextPaint.test.ts",
     "LargestContentfulPaint.test.ts",
     "RenderBlocking.test.ts",
