--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -24,6 +24,7 @@ copy_to_gen("traces") {
     "generic-about-tracing.json.gz",
     "idle-callback.json.gz",
     "idle-tasks.json.gz",
+    "instant-animation-events.json.gz",
     "interactive-time.json.gz",
     "invalid-animation-events.json.gz",
     "invalidate-style-class-name-change.json.gz",
@@ -47,6 +48,7 @@ copy_to_gen("traces") {
     "nested-initiators.json.gz",
     "nested-interactions.json.gz",
     "node-fibonacci-website.cpuprofile.gz",
+    "non-composited-animation.json.gz",
     "one-second-interaction.json.gz",
     "parser-blocking-after-paint.json.gz",
     "postmessage-initiators.json.gz",
