Support viewing element source in React DevTools

--- a/front_end/visibility.gni
+++ b/front_end/visibility.gni
@@ -3,5 +3,7 @@
 # found in the LICENSE file.
 
 declare_args() {
-  devtools_visibility = []
+  devtools_visibility = [
+    "//front_end/panels/react_devtools/*",
+  ]
 }
