--- a/front_end/panels/react_devtools/BUILD.gn
+++ b/front_end/panels/react_devtools/BUILD.gn
@@ -14,6 +14,8 @@ devtools_module("react_devtools") {
   deps = [
     "../../core/i18n:bundle",
     "../../core/sdk:bundle",
+    "../../models/bindings:bundle",
+    "../../models/logs:bundle",
     "../../models/react_native:bundle",
     "../../third_party/react-devtools:bundle",
     "../../ui/legacy:bundle",
