--- a/front_end/panels/timeline/BUILD.gn
+++ b/front_end/panels/timeline/BUILD.gn
@@ -114,6 +114,7 @@ devtools_module("timeline") {
     "../../services/annotations_manager:bundle",
     "../../services/trace_bounds:bundle",
     "../../ui/components/buttons:bundle",
+    "../../ui/components/code_highlighter:bundle",  # trace event highlighting
     "../../ui/components/data_grid:bundle",
     "../../ui/components/linkifier:bundle",
     "../../ui/components/menus:bundle",
