[GM3Restyling] Update SearchableView search bar to GM3
Before: https://i.imgur.com/42qEEUx.png
After: https://i.imgur.com/k5efb7x.png
Bug: 325442270
Change-Id: I57d70b8d45ac5a45e75d30326c416866dc2f342b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5522199
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -173,6 +173,7 @@ devtools_svg_sources = [
   "lightbulb-spark.svg",
   "lighthouse_logo.svg",
   "list.svg",
+  "match-case.svg",
   "match-whole-word.svg",
   "memory.svg",
   "minus.svg",
@@ -192,6 +193,7 @@ devtools_svg_sources = [
   "record-stop.svg",
   "redo.svg",
   "refresh.svg",
+  "regular-expression.svg",
   "replace.svg",
   "replay.svg",
   "report.svg",
