--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -170,6 +170,7 @@ grd_files_release_sources = [
   "front_end/Images/lightbulb-spark.svg",
   "front_end/Images/lighthouse_logo.svg",
   "front_end/Images/list.svg",
+  "front_end/Images/match-case.svg",
   "front_end/Images/match-whole-word.svg",
   "front_end/Images/memory.svg",
   "front_end/Images/minus.svg",
@@ -193,6 +194,7 @@ grd_files_release_sources = [
   "front_end/Images/record-stop.svg",
   "front_end/Images/redo.svg",
   "front_end/Images/refresh.svg",
+  "front_end/Images/regular-expression.svg",
   "front_end/Images/replace.svg",
   "front_end/Images/replay.svg",
   "front_end/Images/report.svg",
