[testing] Pick up resources for perf panel tests from the gen directory
Bug: b:333423685
Change-Id: I4da5745b97974284ce7681102f7224049b644787
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5538148
Commit-Queue: Philip Pfaffe <pfaffe@chromium.org>
Reviewed-by: Liviu Rau <liviurau@chromium.org>

--- a/test/e2e/resources/performance/BUILD.gn
+++ b/test/e2e/resources/performance/BUILD.gn
@@ -11,6 +11,7 @@ copy_to_gen("performance") {
     "selectorStats/page-with-style.css",
     "selectorStats/page-with-style.html",
     "timeline/treeView-test-trace.json",
+    "wasm/mainWasm_profile.json",
     "wasm/profiling.html",
     "wasm/profiling.wasm",
   ]
