[ve] Replace stabilize* test helpers with getVeId
This allows test to be more explicit about which element log should
correspond to.

Bug: none
Change-Id: I2d212b8a0b53ab46a94e822238b009a9190fd097
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5541748
Auto-Submit: Danil Somsikov <dsv@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/testing/BUILD.gn
+++ b/front_end/testing/BUILD.gn
@@ -80,5 +80,6 @@ ts_library("testing") {
     "../ui/legacy/components/perf_ui:bundle",
     "../ui/legacy/theme_support:bundle",
     "../ui/lit-html:bundle",
+    "../ui/visual_logging:testing",
   ]
 }
