[RPP Observations] Move timeline landing page to separate file
Bug: 334926021
Change-Id: Ife589f776681dba9ebe92db0a41927a0b138c0c6
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5549633
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/BUILD.gn
+++ b/front_end/panels/timeline/BUILD.gn
@@ -81,6 +81,7 @@ devtools_module("timeline") {
     "TimelineFlameChartNetworkDataProvider.ts",
     "TimelineFlameChartView.ts",
     "TimelineHistoryManager.ts",
+    "TimelineLandingPage.ts",
     "TimelineLayersView.ts",
     "TimelineLoader.ts",
     "TimelineMiniMap.ts",
