[testing] Add deprecation warnings to legacy test scripts
Bug: 333423685
Change-Id: I7d1386aea4181f7108fb68df835170b6bf351240
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5554311
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Philip Pfaffe <pfaffe@chromium.org>

--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
     "auto-debug-e2etest": "npm run build && npm run debug-e2etest --",
     "auto-debug-interactionstest": "npm run build && npm run debug-interactionstest --",
     "auto-debug-unittest": "DEBUG_TEST=1 npm run auto-unittest --",
-    "auto-e2etest": "vpython3 third_party/node/node.py --output scripts/test/run_test_suite.js --config=test/e2e/test-runner-config.json --autoninja",
-    "auto-e2etest-rdb": "rdb stream -new -realm chromium:public -- npm run auto-e2etest --",
+    "auto-e2etest": "npm run test -- --warn auto-e2etest && vpython3 third_party/node/node.py --output scripts/test/run_test_suite.js --config=test/e2e/test-runner-config.json --autoninja",
+    "auto-e2etest-rdb": "npm run test -- --warn auto-e2etest-rdb && rdb stream -new -realm chromium:public -- npm run auto-e2etest --",
     "auto-e2etest-parallel": "npm run build && npm run e2etest-parallel --",
-    "auto-e2etest-parallel-rdb": "rdb stream -new -realm chromium:public -- npm run auto-e2etest-parallel --",
+    "auto-e2etest-parallel-rdb": "npm run test -- --warn auto-e2etest-parallel-rdb && rdb stream -new -realm chromium:public -- npm run auto-e2etest-parallel --",
     "auto-interactionstest": "npm run build && npm run interactionstest --",
-    "auto-interactionstest-rdb": "rdb stream -new -realm chromium:public -- npm run auto-interactionstest --",
-    "auto-screenshotstest": "npm run build && third_party/node/node.py --output scripts/test/run_test_suite.js --config test/interactions/test-runner-config.json --mocha-fgrep '[screenshot]'",
-    "auto-screenshotstest-rdb": "rdb stream -new -realm chromium:public -- npm run auto-screenshotstest --",
-    "auto-unittest": "vpython3 scripts/test/run_auto_unittests.py --no-text-coverage",
-    "auto-unittest-rdb": "rdb stream -new -realm chromium:public -- npm run auto-unittest --",
-    "auto-unittest-coverage": "vpython3 scripts/test/run_auto_unittests.py --no-text-coverage --coverage",
+    "auto-interactionstest-rdb": "npm run test -- --warn auto-interactionstest-rdb && rdb stream -new -realm chromium:public -- npm run auto-interactionstest --",
+    "auto-screenshotstest": "npm run test -- --warn auto-screenshotstest && npm run build && third_party/node/node.py --output scripts/test/run_test_suite.js --config test/interactions/test-runner-config.json --mocha-fgrep '[screenshot]'",
+    "auto-screenshotstest-rdb": "npm run test -- --warn auto-screenshotstest-rdb && rdb stream -new -realm chromium:public -- npm run auto-screenshotstest --",
+    "auto-unittest": "npm run test -- --warn auto-unittest && vpython3 scripts/test/run_auto_unittests.py --no-text-coverage",
+    "auto-unittest-rdb": "npm run test -- --warn auto-unittest-rdb && rdb stream -new -realm chromium:public -- npm run auto-unittest --",
+    "auto-unittest-coverage": "npm run test -- --warn auto-unittest-coverage && vpython3 scripts/test/run_auto_unittests.py --no-text-coverage --coverage",
     "bake-strings": "npm run collect-strings && vpython3 third_party/node/node.py --output third_party/i18n/bake-strings.js front_end/core/i18n/locales",
     "build": "autoninja -C out/Default",
     "build-release": "autoninja -C out/Release",
@@ -47,26 +47,27 @@
     "debug-interactionstest": "DEBUG_TEST=1 npm run interactionstest",
     "debug-webtest": "vpython3 third_party/node/node.py --output scripts/npm_test.js --debug-devtools",
     "debug-unittest": "DEBUG_TEST=1 npm run unittest",
-    "e2etest": "vpython3 third_party/node/node.py --output scripts/test/run_test_suite.js --config=test/e2e/test-runner-config.json",
-    "e2etest-parallel": "vpython3 scripts/test/run_test_suite_parallel.py",
+    "e2etest": "npm run test -- --warn e2etest && vpython3 third_party/node/node.py --output scripts/test/run_test_suite.js --config=test/e2e/test-runner-config.json",
+    "e2etest-parallel": "npm run test -- --warn e2etest-parallel && vpython3 scripts/test/run_test_suite_parallel.py",
     "eslint-test": "vpython3 third_party/node/node.py --output node_modules/mocha/bin/mocha \"./scripts/eslint_rules/tests/*_test.js\"",
     "build-test": "vpython3 third_party/node/node.py --output node_modules/mocha/bin/mocha \"./scripts/build/tests/*_test.js\"",
     "generate-dark-mode-styles": "vpython3 third_party/node/node.py --output scripts/dark_mode/generate_dark_theme_sheet.js",
     "generate-protocol-resources": "scripts/deps/generate_protocol_resources.py && git cl format --js",
     "install-deps": "scripts/deps/manage_node_deps.py",
-    "interactionstest": "vpython3 third_party/node/node.py --output scripts/test/run_test_suite.js --config=test/interactions/test-runner-config.json",
-    "perf": "vpython3 third_party/node/node.py --output scripts/test/run_test_suite.js --config=test/perf/test-runner-config.json",
+    "interactionstest": "npm run test -- --warn interactionstest && vpython3 third_party/node/node.py --output scripts/test/run_test_suite.js --config=test/interactions/test-runner-config.json",
+    "perf": "npm run test -- --warn perf && vpython3 third_party/node/node.py --output scripts/test/run_test_suite.js --config=test/perf/test-runner-config.json",
     "prebuild": "gn gen out/Default",
+		"rdb": "rdb stream -new -realm chrome:public --",
     "setup-dtrun": "cd scripts/devtools_run && npm link",
     "start": "node -e 'console.log(`This script has been removed in favor of --custom-devtools-frontend. For more information, see https://docs.google.com/document/d/1COgCBWWuTh2o-Zbp6h_z0h0LtlJaimaEDsION4RZPxc/edit?usp=sharing`);'",
     "stylelint-test": "vpython3 third_party/node/node.py --output ./node_modules/.bin/mocha \"./scripts/stylelint_rules/tests/*_test.js\"",
     "webtest": "vpython3 third_party/node/node.py --output scripts/npm_test.js",
     "webtest-local": "vpython3 third_party/node/node.py --output scripts/npm_test.js --layout-tests-directory=test/webtests/",
     "ts_library-test": "./third_party/typescript/tests/verify_ts_libary.sh",
-    "unittest": "vpython3 scripts/test/run_unittests.py --no-text-coverage",
+    "unittest": "npm run test -- --warn unittest && vpython3 scripts/test/run_unittests.py --no-text-coverage",
     "watch": "vpython3 third_party/node/node.py --output scripts/watch_build.js",
     "test": "vpython3 third_party/node/node.py --output scripts/run_on_target.mjs gen/test/run.js",
-    "watch-unittest": "vpython3 scripts/test/run_unittests.py --no-text-coverage --karma-args='--auto-watch --no-single-run --restart-on-file-change --auto-watch-batch-delay 250'"
+    "watch-unittest": "npm run test -- --warn watch-unittest && vpython3 scripts/test/run_unittests.py --no-text-coverage --karma-args='--auto-watch --no-single-run --restart-on-file-change --auto-watch-batch-delay 250'"
   },
   "devDependencies": {
     "@istanbuljs/schema": "0.1.3",
