RPP: URLForEntry helper
This CL merges some duplicate functions we had that, for a given entry,
can return the URL.

This has to live in Extras rather than Helpers because Handlers depends
on Helpers, so you cannot have Helpers depending on Handlers too. That's
a bit frustrating but...Extras seems like a decent place for these. We
can think about this some other time.

Bug: 40287735
Change-Id: I76cce3025864e24b14d7d7c3bdc8035ed551969d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5554235
Reviewed-by: Andres Olivares <andoli@chromium.org>
Commit-Queue: Andres Olivares <andoli@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -969,6 +969,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/extras/FilmStrip.js",
   "front_end/models/trace/extras/MainThreadActivity.js",
   "front_end/models/trace/extras/Metadata.js",
+  "front_end/models/trace/extras/URLForEntry.js",
   "front_end/models/trace/handlers/AnimationHandler.js",
   "front_end/models/trace/handlers/AuctionWorkletsHandler.js",
   "front_end/models/trace/handlers/ExtensionTraceDataHandler.js",
