[RPP] Add a Sidebar component
Add Sidebar component to Timeline Components folder and make a wrapper for a sidebar and timelinePane to put them side by side.

Bug: 339802154
Bug: 342100017
Change-Id: I11eb0f951f25a919bb5d4a7eafd51eb0ecb83164
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5535296
Reviewed-by: Andres Olivares <andoli@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -11,6 +11,7 @@ generate_css("css_files") {
   sources = [
     "breadcrumbsUI.css",
     "interactionBreakdown.css",
+    "sidebar.css",
   ]
 }
 
@@ -20,6 +21,7 @@ devtools_module("components") {
     "BreadcrumbsUI.ts",
     "DetailsView.ts",
     "InteractionBreakdown.ts",
+    "Sidebar.ts",
   ]
 
   deps = [
