--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1676,8 +1676,10 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/BreadcrumbsUI.js",
   "front_end/panels/timeline/components/DetailsView.js",
   "front_end/panels/timeline/components/InteractionBreakdown.js",
+  "front_end/panels/timeline/components/Sidebar.js",
   "front_end/panels/timeline/components/breadcrumbsUI.css.js",
   "front_end/panels/timeline/components/interactionBreakdown.css.js",
+  "front_end/panels/timeline/components/sidebar.css.js",
   "front_end/panels/timeline/extensions/ExtensionUI.js",
   "front_end/panels/timeline/historyToolbarButton.css.js",
   "front_end/panels/timeline/timelineFlamechartPopover.css.js",
