[Freestyler] Add initial panel behind the freestyler query flag
Bug: 340805362
Change-Id: I1961ead0b0835f034267568ee0de418b4fd313e2
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5557765
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -527,6 +527,8 @@ grd_files_release_sources = [
   "front_end/panels/event_listeners/event_listeners.js",
   "front_end/panels/explain/explain-meta.js",
   "front_end/panels/explain/explain.js",
+  "front_end/panels/freestyler/freestyler-meta.js",
+  "front_end/panels/freestyler/freestyler.js",
   "front_end/panels/issues/components/components.js",
   "front_end/panels/issues/issues-meta.js",
   "front_end/panels/issues/issues.js",
@@ -1295,6 +1297,7 @@ grd_files_debug_sources = [
   "front_end/panels/explain/components/ConsoleInsight.js",
   "front_end/panels/explain/components/consoleInsight.css.js",
   "front_end/panels/explain/components/consoleInsightSourcesList.css.js",
+  "front_end/panels/freestyler/FreestylerPanel.js",
   "front_end/panels/issues/AffectedBlockedByResponseView.js",
   "front_end/panels/issues/AffectedCookiesView.js",
   "front_end/panels/issues/AffectedDirectivesView.js",
