--- a/front_end/entrypoints/shell/BUILD.gn
+++ b/front_end/entrypoints/shell/BUILD.gn
@@ -21,6 +21,7 @@ devtools_entrypoint("shell") {
     "../../panels/console_counters:meta",
     "../../panels/coverage:meta",
     "../../panels/explain:meta",
+    "../../panels/freestyler:meta",
     "../../panels/linear_memory_inspector:meta",
     "../../panels/profiler:meta",
     "../../panels/protocol_monitor:meta",
