[Freestyler] Add initial UI for the freestyler
First page: https://screenshot.googleplex.com/7gAuzMWcQjraU5s
Second page: https://screenshot.googleplex.com/B8uWCEnHX7xihH8

Bug: 340805362
Change-Id: Id77a326b3a984c39e16677c162d8200b077d3032
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5563424
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/freestyler/BUILD.gn
+++ b/front_end/panels/freestyler/BUILD.gn
@@ -8,10 +8,23 @@ import("../../../scripts/build/ninja/generate_css.gni")
 import("../../../third_party/typescript/typescript.gni")
 import("../visibility.gni")
 
-devtools_module("freestyler") {
-  sources = [ "FreestylerPanel.ts" ]
+generate_css("css_files") {
+  sources = [
+    "./components/freestylerChatUi.css",
+    "./freestylerPanel.css",
+  ]
+}
 
-  deps = [ "../../ui/legacy:bundle" ]
+devtools_module("freestyler") {
+  sources = [
+    "FreestylerPanel.ts",
+    "components/FreestylerChatUi.ts",
+  ]
+
+  deps = [
+    ":css_files",
+    "../../ui/legacy:bundle",
+  ]
 }
 
 devtools_entrypoint("bundle") {
