Move WasmDisassembly to TextUtils and make it a ContentData subclass
We don't want a dependency of 'core/common' to 'models/text_utils'.

Mostly a mechanical change, the interesting bit is probably the
`super` call in the WasmDisassembly constructor and an overridden
`asDeferedContent`.

R=pfaffe@chromium.org

Bug: 342529015
Change-Id: I3d42bdeed17d40257e4b722cbd498dc6b09215a3
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5569449
Commit-Queue: Simon Zünd <szuend@chromium.org>
Reviewed-by: Philip Pfaffe <pfaffe@chromium.org>

--- a/front_end/models/text_utils/BUILD.gn
+++ b/front_end/models/text_utils/BUILD.gn
@@ -18,6 +18,7 @@ devtools_module("text_utils") {
     "TextCursor.ts",
     "TextRange.ts",
     "TextUtils.ts",
+    "WasmDisassembly.ts",
   ]
 
   deps = [
@@ -62,6 +63,7 @@ ts_library("unittests") {
     "TextCursor.test.ts",
     "TextRange.test.ts",
     "TextUtils.test.ts",
+    "WasmDisassembly.test.ts",
   ]
 
   deps = [
