--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -600,6 +600,7 @@ grd_files_release_sources = [
   "front_end/panels/web_audio/web_audio.js",
   "front_end/panels/webauthn/webauthn-meta.js",
   "front_end/panels/webauthn/webauthn.js",
+  "front_end/services/events_serializer/events_serializer.js",
   "front_end/services/modifications_manager/modifications_manager.js",
   "front_end/services/puppeteer/puppeteer.js",
   "front_end/services/trace_bounds/trace_bounds.js",
@@ -1718,6 +1719,7 @@ grd_files_debug_sources = [
   "front_end/panels/web_audio/webAudio.css.js",
   "front_end/panels/webauthn/WebauthnPane.js",
   "front_end/panels/webauthn/webauthnPane.css.js",
+  "front_end/services/events_serializer/EventsSerializer.js",
   "front_end/services/modifications_manager/ModificationsManager.js",
   "front_end/services/puppeteer/PuppeteerConnection.js",
   "front_end/services/trace_bounds/TraceBounds.js",
