[Freestyler] Separate `evaluate` action to its own class and make sure that stringifying for common cases are correct
Fixed: 346516921
Change-Id: I65720fc5a90113fc7eef517ecba1b0712ce8b889
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5626312
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/freestyler/BUILD.gn
+++ b/front_end/panels/freestyler/BUILD.gn
@@ -18,6 +18,7 @@ generate_css("css_files") {
 devtools_module("freestyler") {
   sources = [
     "FreestylerAgent.ts",
+    "FreestylerEvaluateAction.ts",
     "FreestylerPanel.ts",
     "components/FreestylerChatUi.ts",
   ]
@@ -52,4 +53,17 @@ devtools_entrypoint("meta") {
   deps = [ ":bundle" ]
 
   visibility = [ "../../entrypoints/*" ]
+}
+
+ts_library("unittests") {
+  testonly = true
+
+  sources = [ "FreestylerEvaluateAction.test.ts" ]
+
+  deps = [
+    ":bundle",
+    "../../core/sdk:bundle",
+    "../../generated:protocol",
+    "../../testing",
+  ]
 }
