Simple LCP insight component for sidebar
This creates the sidebar component for the LCP phases insight within the Insights tab.

https://screenshot.googleplex.com/AcDKvJnyqf3FqTN

Bug:344550388
Change-Id: I26aa204aac814c205d0e8d48a2432e6e24ae0c8e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5598900
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Adriana Ixba <aixba@google.com>

--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -13,6 +13,7 @@ generate_css("css_files") {
     "interactionBreakdown.css",
     "liveMetricsView.css",
     "sidebar.css",
+    "sidebarInsight.css",
     "timeRangeOverlay.css",
   ]
 }
@@ -25,6 +26,7 @@ devtools_module("components") {
     "InteractionBreakdown.ts",
     "LiveMetricsView.ts",
     "Sidebar.ts",
+    "SidebarInsight.ts",
     "TimeRangeOverlay.ts",
   ]
 
@@ -68,6 +70,7 @@ ts_library("unittests") {
     "InteractionBreakdown.test.ts",
     "Invalidations.test.ts",
     "LiveMetricsView.test.ts",
+    "SidebarInsight.test.ts",
   ]
 
   deps = [
