--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1704,6 +1704,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/InteractionBreakdown.js",
   "front_end/panels/timeline/components/LiveMetricsView.js",
   "front_end/panels/timeline/components/Sidebar.js",
+  "front_end/panels/timeline/components/SidebarAnnotationsTab.js",
   "front_end/panels/timeline/components/SidebarInsight.js",
   "front_end/panels/timeline/components/TimeRangeOverlay.js",
   "front_end/panels/timeline/components/breadcrumbsUI.css.js",
@@ -1711,6 +1712,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/interactionBreakdown.css.js",
   "front_end/panels/timeline/components/liveMetricsView.css.js",
   "front_end/panels/timeline/components/sidebar.css.js",
+  "front_end/panels/timeline/components/sidebarAnnotationsTab.css.js",
   "front_end/panels/timeline/components/sidebarInsight.css.js",
   "front_end/panels/timeline/components/timeRangeOverlay.css.js",
   "front_end/panels/timeline/extensions/ExtensionUI.js",
