--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -14,6 +14,7 @@ generate_css("css_files") {
     "interactionBreakdown.css",
     "liveMetricsView.css",
     "sidebar.css",
+    "sidebarAnnotationsTab.css",
     "sidebarInsight.css",
     "timeRangeOverlay.css",
   ]
@@ -28,6 +29,7 @@ devtools_module("components") {
     "InteractionBreakdown.ts",
     "LiveMetricsView.ts",
     "Sidebar.ts",
+    "SidebarAnnotationsTab.ts",
     "SidebarInsight.ts",
     "TimeRangeOverlay.ts",
   ]
@@ -75,6 +77,7 @@ ts_library("unittests") {
     "InteractionBreakdown.test.ts",
     "Invalidations.test.ts",
     "LiveMetricsView.test.ts",
+    "SidebarAnnotationsTab.test.ts",
     "SidebarInsight.test.ts",
   ]
 
