--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -493,6 +493,7 @@ grd_files_release_sources = [
   "front_end/models/trace/handlers/handlers.js",
   "front_end/models/trace/helpers/helpers.js",
   "front_end/models/trace/insights/insights.js",
+  "front_end/models/trace/lantern/lantern.js",
   "front_end/models/trace/root-causes/root-causes.js",
   "front_end/models/trace/trace.js",
   "front_end/models/trace/types/types.js",
@@ -979,6 +980,7 @@ grd_files_debug_sources = [
   "front_end/models/timeline_model/TimelineProfileTree.js",
   "front_end/models/timeline_model/TracingLayerTree.js",
   "front_end/models/trace/EntriesFilter.js",
+  "front_end/models/trace/LanternComputationData.js",
   "front_end/models/trace/ModelImpl.js",
   "front_end/models/trace/Processor.js",
   "front_end/models/trace/TracingManager.js",
@@ -1029,6 +1031,29 @@ grd_files_debug_sources = [
   "front_end/models/trace/insights/RenderBlocking.js",
   "front_end/models/trace/insights/Viewport.js",
   "front_end/models/trace/insights/types.js",
+  "front_end/models/trace/lantern/BaseNode.js",
+  "front_end/models/trace/lantern/CPUNode.js",
+  "front_end/models/trace/lantern/LanternError.js",
+  "front_end/models/trace/lantern/MetricsModule.js",
+  "front_end/models/trace/lantern/NetworkNode.js",
+  "front_end/models/trace/lantern/PageDependencyGraph.js",
+  "front_end/models/trace/lantern/SimulationModule.js",
+  "front_end/models/trace/lantern/metrics/FirstContentfulPaint.js",
+  "front_end/models/trace/lantern/metrics/Interactive.js",
+  "front_end/models/trace/lantern/metrics/LargestContentfulPaint.js",
+  "front_end/models/trace/lantern/metrics/MaxPotentialFID.js",
+  "front_end/models/trace/lantern/metrics/Metric.js",
+  "front_end/models/trace/lantern/metrics/SpeedIndex.js",
+  "front_end/models/trace/lantern/metrics/TBTUtils.js",
+  "front_end/models/trace/lantern/metrics/TotalBlockingTime.js",
+  "front_end/models/trace/lantern/simulation/ConnectionPool.js",
+  "front_end/models/trace/lantern/simulation/Constants.js",
+  "front_end/models/trace/lantern/simulation/DNSCache.js",
+  "front_end/models/trace/lantern/simulation/NetworkAnalyzer.js",
+  "front_end/models/trace/lantern/simulation/SimulationTimingMap.js",
+  "front_end/models/trace/lantern/simulation/Simulator.js",
+  "front_end/models/trace/lantern/simulation/TCPConnection.js",
+  "front_end/models/trace/lantern/types/lantern.js",
   "front_end/models/trace/root-causes/LayoutShift.js",
   "front_end/models/trace/root-causes/RootCauses.js",
   "front_end/models/trace/types/Configuration.js",
