--- a/front_end/BUILD.gn
+++ b/front_end/BUILD.gn
@@ -133,6 +133,7 @@ group("unittests") {
     "models/trace/handlers:unittests",
     "models/trace/helpers:unittests",
     "models/trace/insights:unittests",
+    "models/trace/lantern:unittests",
     "models/trace/root-causes:unittests",
     "models/trace/types:unittests",
     "models/workspace:unittests",
