--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1734,6 +1734,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/SidebarAnnotationsTab.js",
   "front_end/panels/timeline/components/SidebarInsight.js",
   "front_end/panels/timeline/components/TimeRangeOverlay.js",
+  "front_end/panels/timeline/components/TimespanBreakdownOverlay.js",
   "front_end/panels/timeline/components/breadcrumbsUI.css.js",
   "front_end/panels/timeline/components/entryLabelOverlay.css.js",
   "front_end/panels/timeline/components/interactionBreakdown.css.js",
@@ -1742,6 +1743,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/sidebarAnnotationsTab.css.js",
   "front_end/panels/timeline/components/sidebarInsight.css.js",
   "front_end/panels/timeline/components/timeRangeOverlay.css.js",
+  "front_end/panels/timeline/components/timespanBreakdownOverlay.css.js",
   "front_end/panels/timeline/extensions/ExtensionUI.js",
   "front_end/panels/timeline/historyToolbarButton.css.js",
   "front_end/panels/timeline/timelineFlameChartView.css.js",
