[RPP] Draw initiators when clicking a network request
Bug: 313904815
Change-Id: I8e3047de97a72f30bc38e3774c726fb547cd8b6e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5664659
Commit-Queue: Nancy Li <nancyly@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -26,7 +26,6 @@ copy_to_gen("traces") {
     "idle-callback.json.gz",
     "idle-tasks.json.gz",
     "iframe-shift.json.gz",
-    "initiators.json.gz",
     "instant-animation-events.json.gz",
     "interactive-time.json.gz",
     "invalid-animation-events.json.gz",
@@ -54,6 +53,7 @@ copy_to_gen("traces") {
     "multiple-top-level-renderers.json.gz",
     "nested-initiators.json.gz",
     "nested-interactions.json.gz",
+    "network-requests-initiators.json.gz",
     "network-websocket-messages.json.gz",
     "node-fibonacci-website.cpuprofile.gz",
     "non-composited-animation.json.gz",
