[RPP] Move ModificationsManager and EventsSerializer into Timeline
We will need to import a type for Overlays into the ModificationsManager, but currently it causes a circular dependency issue.
Move ModificationsManager and EventsSerializer into Timeline instead.

Bug: 350657815
Change-Id: I1fa7975adc705d8a7221d403598b5627d77f7111
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5679135
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>

--- a/front_end/panels/timeline/BUILD.gn
+++ b/front_end/panels/timeline/BUILD.gn
@@ -60,6 +60,7 @@ devtools_module("timeline") {
     "CompatibilityTracksAppender.ts",
     "CountersGraph.ts",
     "EventUICategory.ts",
+    "EventsSerializer.ts",
     "EventsTimelineTreeView.ts",
     "ExtensionDataGatherer.ts",
     "ExtensionTrackAppender.ts",
@@ -69,6 +70,7 @@ devtools_module("timeline") {
     "InteractionsTrackAppender.ts",
     "IsolateSelector.ts",
     "LayoutShiftsTrackAppender.ts",
+    "ModificationsManager.ts",
     "NetworkTrackAppender.ts",
     "Overlays.ts",
     "SaveFileFormatter.ts",
@@ -113,7 +115,6 @@ devtools_module("timeline") {
     "../../panels/layer_viewer:bundle",
     "../../panels/mobile_throttling:bundle",
     "../../panels/profiler:bundle",
-    "../../services/modifications_manager:bundle",
     "../../services/trace_bounds:bundle",
     "../../ui/components/buttons:bundle",
     "../../ui/components/code_highlighter:bundle",  # trace event highlighting
@@ -181,8 +182,10 @@ ts_library("unittests") {
 
   sources = [
     "Breadcrumbs.test.ts",
+    "EventsSerializer.test.ts",
     "FreshRecording.test.ts",
     "Initiators.test.ts",
+    "ModificationsManager.test.ts",
     "Overlays.test.ts",
     "SaveFileFormatter.test.ts",
     "SourceMapsResolver.test.ts",
