Move RPP sidebar to floating button
This CL implements the floating button, ensuring that by default when
the sidebar is closed it does not take up any space. When the button is
clicked the sidebar then expands.

Sidebar closed: https://screenshot.googleplex.com/644iQQPsTZ8giyj

Sidebar open: https://screenshot.googleplex.com/4R2B6dkWvHc56Tm

This CL also updates the sidebar to be non-resizable. It does not
include the work to add the annotations count as a small circle on the
button, we will do that as we have built out all the annotations.

Bug: 348590670
Change-Id: Ie6e68748b27b1a0d8df72e16b988b57813eaa6c4
Fixed: 348572151
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5676801
Reviewed-by: Nancy Li <nancyly@chromium.org>
Commit-Queue: Andres Olivares <andoli@chromium.org>
Reviewed-by: Andres Olivares <andoli@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/BUILD.gn
+++ b/front_end/panels/timeline/BUILD.gn
@@ -119,6 +119,7 @@ devtools_module("timeline") {
     "../../ui/components/buttons:bundle",
     "../../ui/components/code_highlighter:bundle",  # trace event highlighting
     "../../ui/components/data_grid:bundle",
+    "../../ui/components/icon_button:bundle",
     "../../ui/components/linkifier:bundle",
     "../../ui/components/menus:bundle",
     "../../ui/components/panel_feedback:bundle",
