[RPP Observations] Add throttling settings to landing page
This CL adds 2 new components for selecting CPU and network throttling.
They are meant to be web component versions of the toolbar throttling
selectors.

https://screenshot.googleplex.com/8QCkWHpu9sUT9Yj

Bug: 311440438
Change-Id: Ie53a153acbdf3289b8386f42c7ded6adaac8ef0b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5673433
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Nancy Li <nancyly@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -26,11 +26,13 @@ devtools_module("components") {
   sources = [
     "Breadcrumbs.ts",
     "BreadcrumbsUI.ts",
+    "CPUThrottlingSelector.ts",
     "DetailsView.ts",
     "EntryLabelOverlay.ts",
     "InteractionBreakdown.ts",
     "LiveMetricsView.ts",
     "NetworkRequestTooltip.ts",
+    "NetworkThrottlingSelector.ts",
     "Sidebar.ts",
     "SidebarAnnotationsTab.ts",
     "SidebarInsight.ts",
@@ -55,6 +57,7 @@ devtools_module("components") {
     "../../../ui/legacy/components/perf_ui:bundle",
     "../../../ui/lit-html:bundle",
     "../../../ui/visual_logging:bundle",
+    "../../mobile_throttling:bundle",
   ]
 }
 
@@ -79,9 +82,11 @@ ts_library("unittests") {
 
   sources = [
     "BreadcrumbsUI.test.ts",
+    "CPUThrottlingSelector.test.ts",
     "InteractionBreakdown.test.ts",
     "Invalidations.test.ts",
     "LiveMetricsView.test.ts",
+    "NetworkThrottlingSelector.test.ts",
     "SidebarAnnotationsTab.test.ts",
     "SidebarInsight.test.ts",
   ]
