--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1021,6 +1021,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/handlers/WorkersHandler.js",
   "front_end/models/trace/handlers/types.js",
   "front_end/models/trace/helpers/Extensions.js",
+  "front_end/models/trace/helpers/Network.js",
   "front_end/models/trace/helpers/SamplesIntegrator.js",
   "front_end/models/trace/helpers/SyntheticEvents.js",
   "front_end/models/trace/helpers/Timing.js",
