--- a/front_end/models/trace/helpers/BUILD.gn
+++ b/front_end/models/trace/helpers/BUILD.gn
@@ -10,6 +10,7 @@ import("../../visibility.gni")
 devtools_module("helpers") {
   sources = [
     "Extensions.ts",
+    "Network.ts",
     "SamplesIntegrator.ts",
     "SyntheticEvents.ts",
     "Timing.ts",
