[test] Helper to check context menus
Bug: 348084788
Change-Id: Ibc5ab78136bbbfea59ea0340f1ae70be893f4c27
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5683045
Commit-Queue: Danil Somsikov <dsv@chromium.org>
Reviewed-by: Yang Guo <yangguo@chromium.org>
Auto-Submit: Danil Somsikov <dsv@chromium.org>

--- a/front_end/testing/BUILD.gn
+++ b/front_end/testing/BUILD.gn
@@ -9,6 +9,7 @@ ts_library("testing") {
 
   sources = [
     "ConsoleHelpers.ts",
+    "ContextMenuHelpers.ts",
     "Cookies.ts",
     "DOMHelpers.ts",
     "DataGridHelpers.ts",
